--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   weather: ^3.1.1
   geolocator: ^10.1.0
   flutter_bloc: ^8.1.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
